accounting-service/k8/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: accounting
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind: Mapping
      name: accounting
      prefix: ^/api/accounting(/.*)?$
      prefix_regex: true
      service: accounting:8080
      rewrite: ""

spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: accounting-service
